# mcp-openi-server

./: .gitignore  .mcp.json.example  LICENSE  README.md  cli.py  openi  openi_client.py  pyproject.toml  requirements.txt  server.py
.claude-plugin/: marketplace.json  plugin.json
skills/medical-image/: SKILL.md
