[project]
name = "mcp-openi-server"
version = "1.0.0"
description = "MCP server + CLI to search Open-i (NLM) biomedical/medical/dental images from Claude Code and the terminal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LeviReisJs" }]
keywords = ["mcp", "openi", "nlm", "medical-images", "claude-code", "dental", "radiology"]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
# Installs an `openi` command when you `pip install .` — same as using the
# bundled ./openi bash launcher, but managed by your Python environment.
openi = "cli:main"

[project.urls]
Homepage = "https://github.com/LeviReisJs/mcp-openi-server"
"Open-i API" = "https://openi.nlm.nih.gov/services"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "cli", "openi_client"]
